fixed floating crash android sdk tools on run added print sdk logs after emulator run